# ot-nvidia-NVIDIA-Nemotron-3-Nano-30B-A3B-BF16

./: .gitignore  BENCHMARK_GUIDE.md  benchmark_openthoughts.sh  benchmark_terminalbench.sh  config.yaml  deploy_model.py  pyproject.toml  serve_api.py  utils.py
Devstral-finetuned-versions/devstral-sft-updated-weightsv0.1/: README.md
Devstral-finetuned-versions/devstral-sft-updated-weightsv0.1/checkpoint-100/: README.md  adapter_config.json  scheduler.pt  tokenizer_config.json  trainer_state.json
Devstral-finetuned-versions/merged-devstral-sft/: config.json  config.json.bak  generation_config.json
SFT/: train.yaml
SFT-recipes/trl/: merge_lora.py  merge_mistral_lora.py  train.yaml  train_multi_gpu.sh
SFT-recipes/trl/grpo/: push_to_hf.py  train_grpo.py
SFT-recipes/trl/sft/: SFT_GUIDE.md  train_sft.py
SFT-recipes/unsloth/: train_multi_gpu.sh  train_sft.py
SFT/trl/: merge_lora.py  train.yaml  train_sft.py
SFT/unsloth_compiled_cache/: BatchNorm2d.py  Conv1d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GroupNorm.py  LayerNorm.py  RMSNorm.py
benchmarks/: BENCHMARK_GUIDE.md
benchmarks/openthoughts/: benchmark_openthoughts.sh
benchmarks/terminal_bench/: benchmark_terminalbench.sh  custom_harbor_external_agent.py
benchmarks/terminal_bench/terminalbench_sft_run1_250steps/tbench_devstral-sft-lora/: config.json  result.json
benchmarks/terminal_bench/terminalbench_sft_run1_250steps/tbench_devstral-sft-lora/adaptive-rejection-sampler__fn8bhio/: config.json  result.json
serve/: SERVE_GUIDE.md
serve/vLLM/: config.yaml  serve.py  utils.py
(+524 files in other folders)
