[project]
name = "ot-nvidia-nvidia-nemotron-3-nano-30b-a3b-bf16"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm==0.11.2",
    "pyyaml",
    "zmq>=0.0.0",
    "harbor>=0.1.25",
    "openai",
    "peft",
    "trl",
    "tensorboard",
    "bitsandbytes>=0.49.1",
]
